# mm_malloc

./: CMakeLists.txt  LICENSE  README.md
include/: my_malloc.h
src/: my_malloc.c
test/: simple_usage.c
